--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#membership">Membership</a>
+                    <li><a href="#products">Membership</a>
                     </li>
-                    <li><a href="#membership">Consultancy</a>
+                    <li><a href="#products">Consultancy</a>
                     </li>
-                    <li><a href="#membership">Visualizations and dashboards</a>
+                    <li><a href="#products">Visualizations and dashboards</a>
                     </li>
                     <li><a href="#clients">Clients</a>
                     </li>
@@ -154,7 +154,6 @@
         </div>
     </div>
 
-    <a name="membership"></a>
     <a name="products"></a>
     <div class="section-colored">
         <div class="container">
@@ -162,24 +161,24 @@
                 <h2>Products</h2>
                 <div class="col-lg-4 col-md-4">
                     <h3>Membership</h3>
-                    <p>Our corporate membership ensures accelerated learning and saves your company valuable time. We get you towards a best in class understanding of real estate centric analytics and visualisations. So you continue to outperform. <button id="open-membership" class="open-dialog-colored">Read more </button>
+                    <p>Our corporate membership ensures accelerated learning and saves your company valuable time. We get you towards a best in class understanding of real estate centric analytics and visualisations. So you continue to outperform. <button id="open-membership" class="open-reader">Read more </button>
                     
-                    <div id="membership-dialog" title="Membership KR&amp;A Research" class="readmore-dialog">The core of our membership is our information and research. Our research about data and real estate is valuable unbiased information and knowledge. It is not a freeby. We are sharing our best sources with you. It will improve your decision making about investment, development and financing of real estate. Sometimes marginally, sometimes very significantly. We analyse and write about retail, residential, office and other real estate sectors. Our research is never deal-incentivised. With our data, analytics and visualisations, your team will be significantly better informed than before. As a result your team will perform better than less-informed competitors. <br /><br />
+                    <p id="membership" style="display:none">The core of our membership is our information and research. Our research about data and real estate is valuable unbiased information and knowledge. It is not a freeby. We are sharing our best sources with you. It will improve your decision making about investment, development and financing of real estate. Sometimes marginally, sometimes very significantly. We analyse and write about retail, residential, office and other real estate sectors. Our research is never deal-incentivised. With our data, analytics and visualisations, your team will be significantly better informed than before. As a result your team will perform better than less-informed competitors. <br /><br />
                     Our quarterly reports have a web-magazine and hardcopy format. We offer a closed knowledge platform for members. Our experienced Editorial Board ensures quality and relevance of the publications for real estate professionals. We offer members data, analytics and visualisation training for their teams or individuals. As a result you will be nurturing a data driven process. This can adjust a corporate culture towards more efficiency, and enhance outperformance. Our membership content will be online and readable on PC, tablet and smartphone. <br /> <br />
                     A corporate membership is disruptive. It aims to kill inefficient processes, uninformed investments, undesirable developments and misprices loans. It can support your change in corporate culture. Your outperformance will improve further…  <br /> <br />
-                    Ask us for trial-membership at arjan@knibberesearch.com. Click <a href="http://kramembership.com/" target="_blank" class="red-link">here</a> for a sneak preview of the members-website.</div></p>
+                    Ask us for trial-membership at arjan@knibberesearch.com. Click <a href="http://kramembership.com/" target="_blank" class="red-link">here</a> for a sneak preview of the members-website.</p></p>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <h3>Consultancy</h3>
-                    <p>We write bespoke research about real estate companies, portfolios, markets or scenarios that are relevant for you. We offer consultancy and sound, non-deal driven, expert advice. We offer discrete second opinions and assistance with whitepapers. <button id="open-consultancy" class="open-dialog-colored">Read more </button>
+                    <p>We write bespoke research about real estate companies, portfolios, markets or scenarios that are relevant for you. We offer consultancy and sound, non-deal driven, expert advice. We offer discrete second opinions and assistance with whitepapers. <button id="open-consultancy" class="open-reader">Read more </button>
                     
-                    <div id="consultancy-dialog" title="Consultancy" class="readmore-dialog">
+                    <p id="consultancy" style="display:none">
                     We write bespoke research about real estate companies, markets or scenarios that are relevant for you. We offer consultancy and sound, non-deal driven, expert advice. We can discuss changes to your strategy, and offer advice about equity capital market transactions. Discretely, with an expert opinion and without a deal incentive. We perform due diligence on international real estate joint-ventures, specializing in companies that are listed on the stock exchanges. We give independent second opinions.
-                    <h3>Investor relations, sustainability</h3>
+                    <br><br><span class="small-title">Investor relations, sustainability</span><br>
                     We are experts in investor relations and financial reporting of property companies and can improve your communication. We know the institutional shareholders of real estate companies, their motives and concerns. We have written extensively about sustainability for real estate companies and can help you integrate sustainability in your core processes and strategy. We can also scan your performance on a sustainability scale and advise you about improvement.
-                    <h3>Independent trusted expertise</h3>
+                    <br><br><span class="small-title">Independent trusted expertise</span><br>
                     We do not undertake transactions for ourselves or for clients. We do not care if you buy or sell an asset or a company, we do not work on a transaction fee. We do not care if you issue debt or equity, we do not underwrite for a fee. We only care that you have more data, information, knowledge and experience at your disposal than before. That our clients have more intelligence than their counterparts, to better price real estate assets, their risks and returns. We do not tell you what you want to hear, we tell you what you need to know.
-                    </div>
+                    </p>
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4">
@@ -212,25 +211,25 @@
                 <h2>Clients</h2>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <h3>Real estate companies</h3>
-                    <p>KR&amp;A advises clients about real estate strategies, operations, investor relations, sustainability and equity capital markets. <button id="open-real-estate" class="open-dialog-colored">Read more </button>
-                    <div id="real-estate-dialog" title="Real estate companies" class="readmore-dialog">
-                    KR&amp;A advises clients about real estate strategies, operations, investor relations, sustainability and equity capital markets. In addition we offer second opinions, and we do due diligence, when you are considering an acquisition or takeover. We offer a broad range of data modules in a web based interface. Our data modules are useful at a number of processes in your company. We have access to a wealth of data about micro locations that will give you additional insights into the demographics, lifestyles, interests and hobbies of your catchment area.</div>
+                    <p>KR&amp;A advises clients about real estate strategies, operations, investor relations, sustainability and equity capital markets. <button id="open-estate" class="open-reader">Read more </button>
+                    <p id="estate" style="display:none">
+                    KR&amp;A advises clients about real estate strategies, operations, investor relations, sustainability and equity capital markets. In addition we offer second opinions, and we do due diligence, when you are considering an acquisition or takeover. We offer a broad range of data modules in a web based interface. Our data modules are useful at a number of processes in your company. We have access to a wealth of data about micro locations that will give you additional insights into the demographics, lifestyles, interests and hobbies of your catchment area.</p>
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <h3>Institutional investors</h3>
-                    <p>As shareholders in listed or non listed real estate vehicles you need to have access to all relevant aggregated data to optimise your allocation. <button id="open-investors" class="open-dialog-colored">Read more</button>
-                    <div id="investors-dialog" title="Institutional investors" class="readmore-dialog">
+                    <p>As shareholders in listed or non listed real estate vehicles you need to have access to all relevant aggregated data to optimise your allocation. <button id="open-investors" class="open-reader">Read more</button>
+                    <p id="investors" style="display:none">
                     As shareholders in listed or non listed real estate vehicles you want to have access to all relevant data to optimise your allocation. We can analyse or rank the outlook of cities or portfolios for a very large number of factors. We scan locations, cities and regions for aging, wealth accumulation, unemployment and other drivers of real estate performance. We create scans for your portfolio based on a large number of criteria and we can check the sustainability of the portfolio and strategy of your real estate companies. Our scans enhance returns but they can also be used to identify and minimise risk.
-                    </div>
+                    </p>
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <h3>Investment banks, private equity</h3>
-                    <p>We can immediately add significant European and local real estate intelligence to your investment banking or private equity team. <button id="open-banks" class="open-dialog-colored">Read more </button>
-                    <div id="banks-dialog" title="Investment banks, private equity" class="readmore-dialog">
+                    <p>We can immediately add significant European and local real estate intelligence to your investment banking or private equity team. <button id="open-banks" class="open-reader">Read more </button>
+                    <p id="banks" style="display:none">
                     We add significant European and local real estate intelligence to your investment banking or private equity team. You may find this usefull when your real estate sector team temporarily needs additional local depth or international perspective. We can also give you a quick data update on certain property markets in Europe. In addition we assist in SWOT analyses for real estate locations, portfolios and companies, based on our experience, network and data.
-                    </div>
+                    </p>
                     </p>
                 </div>
                 <!-- /.row -->
