Different headers on slider images
Taken from old site, as per request Arjan

--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
             <div class="item active">
                 <div class="fill" style="background-image:url('./img/slide1.jpg');"></div>
                 <div class="carousel-caption">
-                    <h1>The next tool for real estate decisions</h1>
+                    <h1>Real estate investment is changing fast</h1>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('./img/slide2.jpg');"></div>
                 <div class="carousel-caption">
-                    <h1>Analytics become prescriptive</h1>
+                    <h1>We rank the outlook of your assets</h1>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('./img/slide3.jpg');"></div>
                 <div class="carousel-caption">
-                    <h1>Tenants seem ahead of landlords</h1>
+                    <h1>Real estate deal ahead? Get our data!</h1>
                 </div>
             </div>
 			<div class="item active">
                 <div class="fill" style="background-image:url('./img/slide4.jpg');"></div>
                 <div class="carousel-caption">
-                    <h1>Sources of data are broad</h1>
+                    <h1>Still trusting intuition and experience for property decisions?</h1>
                 </div>
             </div>
             <!--
