Added vimeo video
Let's see if it works...

--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
         </div>
     </div>
 
+    <div class="section">
+        <div class="container">
+            <div class="row">
+		<iframe src="//player.vimeo.com/video/113023538" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/113023538">299017334</a> from <a href="http://vimeo.com/user34870542">Arjan Knibbe</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+            </div>
+        </div>
+    </div>
+
     <a name="products"></a>
     <div class="section-colored">
         <div class="container">
