Video next to intro

--- a/index.html
+++ b/index.html
@@ -147,17 +147,12 @@
 
     <div class="section">
         <div class="container">
-            <div class="row">
+            <div class="col-lg-8 col-md-8">
                 <h1>About KR&amp;A</h1>
                 <p>KR&amp;A is a European real estate consultancy firm. We offer investors solutions for improved returns, and better risk management. We are experienced in valuing and assessing the outlook for listed real estate companies in Europe. KR&A advises real estate investors about strategy, operations and sustainability. We believe data analytics and the resulting information has become a competitive advantage. We offer a broad range of data solutions for real estate companies. We write bespoke research, we perform due diligence and give second opinions. We are never deal-incentivized. As a result our advice is sound, fully aligned and not clouded by a need for a transaction.</p>
             </div>
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="container">
-            <div class="row">
-		<iframe src="//player.vimeo.com/video/113023538" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/113023538">299017334</a> from <a href="http://vimeo.com/user34870542">Arjan Knibbe</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+            <div class="col-lg-4 col-md-4">
+            	<iframe src="//player.vimeo.com/video/113023538" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/113023538">299017334</a> from <a href="http://vimeo.com/user34870542">Arjan Knibbe</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
             </div>
         </div>
     </div>
@@ -311,7 +306,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <h3>Address</h3>
                     <p><img src="img/logo.png" class="img-responsive scaled-eighth">Vijzelstraat 68-78<br>1017&nbsp;HL&nbsp;Amsterdam<br><br><i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022<br><i class="fa fa-fw fa-envelope"></i>&nbsp;info@knibberesearch.com<br><i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com<br><br></p>
-                    <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" height="300" width="100%"src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Vijzelstraat+68+Amsterdam&amp;aq=&amp;sll=52.355519,4.950642&amp;ie=UTF8&amp;t=m&amp;z=11&amp;output=embed&amp;iwloc=near"></iframe>
+                    <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" height="300" width="100%" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Vijzelstraat+68+Amsterdam&amp;aq=&amp;sll=52.355519,4.950642&amp;ie=UTF8&amp;t=m&amp;z=11&amp;output=embed&amp;iwloc=near"></iframe>
                 </div>              
             </div>
             <!-- /.row -->
