--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         </div>
     </div>
 
-    <div class="section">
+    <!--div class="section">
         <div class="container">
             <div class="row">
                 <h2>Founder</h2>
@@ -266,13 +266,19 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
 
     <a name="contact"></a>
-    <div class="section-colored">
+    <div class="section">
         <div class="container">
             <div class="row">
-                <h2>Contact</h2>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                	<p align="justify">KR&amp;A was founded by Arjan Knibbe. Arjan has been a sell-side real estate analyst since 1994 at Kempen &amp; Co, UBS Investment Bank and ING. 
+                	<p id="founder" style="display:none" class="toggle-text">He is a specialist in Continental European property companies and has advised large investors in Europe, the US, Australia and Asia about the strategies, markets, valuation and outlook of European real estate companies. He has written extensively about pan-European valuation methodologies for real estate investmentment and development companies. He has been involved in a large number of equity raisings and IPOs, across Europe. Arjan has a Master in economy from the University of Amsterdam. He specialised in real estate investment and his thesis about the financial reporting of property companies was awarded a 9/10 score by Prof Kohnstamm. He has been a member of the EPRA best practice committee. Arjan is fluent in Dutch, English, French and German and participated in the INSEAD Transition to General Management program in 2013. He teaches listed real estate investment at the MSRE course of the Amsterdam School of Real Estate.</p>
+                	<button id="open-founder" class="open-reader">Read more </button>
+                	</p>
+                </div>
+                <!--h2>Contact</h2>
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <h3>More information?</h3>
                     <script type="text/javascript">var submittedDown=false;</script>
@@ -302,8 +308,8 @@
                     <div id="hidden_div" style="display:none">
                         <p>Thank you for leaving a message. We will be in touch!</p>
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
+                </div-->
+                <div class="col-lg-4 col-md-4 col-sm-4">
                     <h3>Address</h3>
                     <p><img src="img/logo.png" class="img-responsive scaled-eighth">Vijzelstraat 68-78<br>1017&nbsp;HL&nbsp;Amsterdam<br><br><i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022<br><i class="fa fa-fw fa-envelope"></i>&nbsp;info@knibberesearch.com<br><i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com<br><br></p>
                     <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" height="300" width="100%" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Vijzelstraat+68+Amsterdam&amp;aq=&amp;sll=52.355519,4.950642&amp;ie=UTF8&amp;t=m&amp;z=11&amp;output=embed&amp;iwloc=near"></iframe>
@@ -319,7 +325,7 @@
     <div class="section">
         <div class="container">
             <div class="row" align="center">
-                <img src="./img/Logo-full.png" width="25%">
+                <img src="./img/logo.png" width="25%">
             </div>
         </div>
     </div>
