--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <div class="row">
                 <div class="col-lg-4"></div>
                 <div class="col-lg-4" align="center">
-                    <p>&copy; KR&amp;A&nbsp;2014&nbsp; &middot; &nbsp;
+                    <p>&copy; KR&amp;A&nbsp;2014</p>
                 </div>
                 <div class="col-lg-4"></div>
             </div>
