--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
         <div class="container">
             <div class="col-lg-8 col-md-8">
                 <h1>About KR&amp;A</h1>
-                <p>KR&amp;A is a European real estate consultancy firm. We offer investors solutions for improved returns, and better risk management. We are experienced in valuing and assessing the outlook for listed real estate companies in Europe. KR&A advises real estate investors about strategy, operations and sustainability. We believe data analytics and the resulting information has become a competitive advantage. We offer a broad range of data solutions for real estate companies. We write bespoke research, we perform due diligence and give second opinions. We are never deal-incentivized. As a result our advice is sound, fully aligned and not clouded by a need for a transaction.</p>
+                <p>KR&amp;A is a European real estate consultancy firm. We offer investors solutions for improved returns, and better risk management. We are experienced in valuing and assessing the outlook for listed real estate companies in Europe. KR&amp;A advises real estate investors about strategy, operations and sustainability. We believe data analytics and the resulting information has become a competitive advantage. We offer a broad range of data solutions for real estate companies. We write bespoke research, we perform due diligence and give second opinions. We are never deal-incentivized. As a result our advice is sound, fully aligned and not clouded by a need for a transaction.</p>
             </div>
             <div class="col-lg-4 col-md-4">
-            	<iframe src="//player.vimeo.com/video/113023538" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/113023538">299017334</a> from <a href="http://vimeo.com/user34870542">Arjan Knibbe</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+            	<iframe src="//player.vimeo.com/video/113023538" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/113023538"></p>
             </div>
         </div>
     </div>
@@ -200,7 +200,7 @@
             <div class="row">
                 <div class="col-lg-1 col-md-1 col-sm-1"></div>
                 <div class="col-lg-10 col-md-10 col-sm-10">
-                    <img src="img/image.png" class="img-responsive">
+                    <img src="img/arnhem_heatmap.png" class="img-responsive">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1"></div>
             </div>
@@ -273,10 +273,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                	<p align="justify">KR&amp;A was founded by Arjan Knibbe. Arjan has been a sell-side real estate analyst since 1994 at Kempen &amp; Co, UBS Investment Bank and ING. 
-                	<!--p id="founder" style="display:none" class="toggle-text"-->He is a specialist in Continental European property companies and has advised large investors in Europe, the US, Australia and Asia about the strategies, markets, valuation and outlook of European real estate companies. He has written extensively about pan-European valuation methodologies for real estate investmentment and development companies. He has been involved in a large number of equity raisings and IPOs, across Europe. Arjan has a Master in economy from the University of Amsterdam. He specialised in real estate investment and his thesis about the financial reporting of property companies was awarded a 9/10 score by Prof Kohnstamm. He has been a member of the EPRA best practice committee. Arjan is fluent in Dutch, English, French and German and participated in the INSEAD Transition to General Management program in 2013. He teaches listed real estate investment at the MSRE course of the Amsterdam School of Real Estate.</p>
-                	<!--button id="open-founder" class="open-reader">Read more </button>
-                	</p-->
+                    <img src="img/founder.jpg" class="img-responsive scaled-fifth round-edges">
+                    <p align="justify floating-text">KR&amp;A was founded by Arjan Knibbe. Arjan has been a sell-side real estate analyst since 1994 at Kempen &amp; Co, UBS Investment Bank and ING. He is a specialist in Continental European property companies and has advised large investors in Europe, the US, Australia and Asia about the strategies, markets, valuation and outlook of European real estate companies. <p id="founder" style="display:none" class="toggle-text">He has written extensively about pan-European valuation methodologies for real estate investmentment and development companies. He has been involved in a large number of equity raisings and IPOs, across Europe. Arjan has a Master in economy from the University of Amsterdam. He specialised in real estate investment and his thesis about the financial reporting of property companies was awarded a 9/10 score by Prof Kohnstamm. He has been a member of the EPRA best practice committee. Arjan is fluent in Dutch, English, French and German and participated in the INSEAD Transition to General Management program in 2013. He teaches listed real estate investment at the MSRE course of the Amsterdam School of Real Estate.</p>
+                	<button id="open-founder" class="open-reader">Read more </button>
+                	</p>
                 </div>
                 <!--h2>Contact</h2>
                 <div class="col-lg-6 col-md-6 col-sm-6">
@@ -311,7 +311,7 @@
                 </div-->
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <h3>Address</h3>
-                    <p><img src="img/logo.png" class="img-responsive scaled-eighth">Vijzelstraat 68-78<br>1017&nbsp;HL&nbsp;Amsterdam<br><br><i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022<br><i class="fa fa-fw fa-envelope"></i>&nbsp;info@knibberesearch.com<br><i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com<br><br></p>
+                    <p><img src="img/logo.png" class="img-responsive scaled-eighth">Vijzelstraat 68-78<br>1017&nbsp;HL&nbsp;Amsterdam<br><br><i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022<br><i class="fa fa-fw fa-envelope"></i>&nbsp;arjan@knibberesearch.com<br><i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com<br><br></p>
                     <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" height="300" width="100%" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Vijzelstraat+68+Amsterdam&amp;aq=&amp;sll=52.355519,4.950642&amp;ie=UTF8&amp;t=m&amp;z=11&amp;output=embed&amp;iwloc=near"></iframe>
                 </div>              
             </div>
@@ -329,24 +329,32 @@
             </div>
         </div>
     </div>
-    
-        <div class="section-colored">
-            <div class="row">
-                <div class="col-lg-12" align="center">
-                    <p>&copy; KR&amp;A&nbsp;2014</p>
-                </div>
+
+     <div class="section-colored">
+        <div class="row">
+            <div class="col-lg-5"></div>
+            <div class="col-lg-4 center">
+                <p>&copy; KR&amp;A&nbsp;2014</p>
             </div>
-            <div class="row">
-                <div class="col-lg-12" align="center">
-                    <p><i class="fa fa-fw fa-home"></i>&nbsp;Vijzelstraat 68-78&nbsp; &middot; &nbsp;1017&nbsp;HL&nbsp; &middot; &nbsp;Amsterdam&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-envelope"></i>&nbsp;info@knibberesearch.com&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com</p>
-                </div>
-            </div>  
-            <div class="row">
-                <div class="col-lg-12">
-                <p><i class="fa fa-fw fa-info"></i>Trade Register:&nbsp;61899666&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-info"></i>VAT:&nbsp;NL141809553B02</p>
-                </div>
-            </div>
+            <div class="col-lg-3"></div>
         </div>
+
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-9" align="center">
+                <p><i class="fa fa-fw fa-home"></i>&nbsp;Vijzelstraat 68-78&nbsp; &middot; &nbsp;1017&nbsp;HL&nbsp; &middot; &nbsp;Amsterdam&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-envelope"></i>&nbsp;arjan@knibberesearch.com&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com</p>
+            </div>
+            <div class="col-lg-1"></div>
+        </div>  
+
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-6">
+                <p><i class="fa fa-fw fa-info"></i>Trade Register:&nbsp;61899666&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-info"></i>VAT:&nbsp;NL141809553B02</p>
+            </div>
+            <div class="col-lg-4"></div>
+        </div>
+
     </div>
     <!-- /.section -->
 
