--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <p>KR&amp;A is a European real estate consultancy firm. We offer investors solutions for improved returns, and better risk management. We are experienced in valuing and assessing the outlook for listed real estate companies in Europe. KR&amp;A advises real estate investors about strategy, operations and sustainability. We believe data analytics and the resulting information has become a competitive advantage. We offer a broad range of data solutions for real estate companies. We write bespoke research, we perform due diligence and give second opinions. We are never deal-incentivized. As a result our advice is sound, fully aligned and not clouded by a need for a transaction.</p>
             </div>
             <div class="col-lg-4 col-md-4">
-            	<iframe src="//player.vimeo.com/video/113023538" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/113023538"></p>
+            	<iframe src="//player.vimeo.com/video/113024219?title=0&amp;byline=0&amp;portrait=0&amp;color=e1e1e1&amp;loop=1" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
         </div>
     </div>
