--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <p id="membership" style="display:none" class="toggle-text">The core of our membership is our information and research. Our research about data and real estate is valuable unbiased information and knowledge. It is not a freeby. We are sharing our best sources with you. It will improve your decision making about investment, development and financing of real estate. Sometimes marginally, sometimes very significantly. We analyse and write about retail, residential, office and other real estate sectors. Our research is never deal-incentivised. With our data, analytics and visualisations, your team will be significantly better informed than before. As a result your team will perform better than less-informed competitors. <br /><br />
                     Our quarterly reports have a web-magazine and hardcopy format. We offer a closed knowledge platform for members. Our experienced Editorial Board ensures quality and relevance of the publications for real estate professionals. We offer members data, analytics and visualisation training for their teams or individuals. As a result you will be nurturing a data driven process. This can adjust a corporate culture towards more efficiency, and enhance outperformance. Our membership content will be online and readable on PC, tablet and smartphone. <br /> <br />
                     A corporate membership is disruptive. It aims to kill inefficient processes, uninformed investments, undesirable developments and misprices loans. It can support your change in corporate culture. Your outperformance will improve further…  <br /> <br />
-                    Ask us for trial-membership at arjan@knibberesearch.com. Click <a href="http://kramembership.com/" target="_blank" class="red-link">here</a> for a sneak preview of the members-website.</p> <button id="open-membership" class="open-reader">Read more </button></p>
+                    Ask us for trial-membership at <a href="mailto:arjan@knibberesearch.com" class="red-link">arjan@knibberesearch.com</a>. Click <a href="http://kramembership.com/" target="_blank" class="red-link">here</a> for a sneak preview of the members-website.</p> <button id="open-membership" class="open-reader">Read more </button></p>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <h3>Consultancy</h3>
@@ -202,7 +202,7 @@
             <div class="row">
                 <div class="col-lg-1 col-md-1 col-sm-1"></div>
                 <div class="col-lg-10 col-md-10 col-sm-10">
-                    <img src="img/arnhem_heatmap.png" class="img-responsive">
+                    <a href="img/arnhem_heatmap.png"><img src="img/arnhem_heatmap.png" class="img-responsive"></a>
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1"></div>
             </div>
@@ -248,8 +248,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-1 col-md-1 col-sm-1"></div>
-                <div class="col-lg-10 col-md-10 col-sm-10">
-                    <img src="img/image2.png" class="img-responsive">
+                <div class="col-lg-5 col-md-5 col-sm-5">
+                    <a href="img/metro_map.jpg"><img src="img/metro_map.jpg" class="img-responsive"></a>
+                </div>
+                <div class="col-lg-5 col-md-5 col-sm-5">
+                    <a href="img/vergrijzing_amsterdam.png"><img src="img/vergrijzing_amsterdam.png" class="img-responsive"></a>
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1"></div>
             </div>
@@ -274,8 +277,8 @@
     <div class="section-colored">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-8">
-                    <img src="img/founder.jpg" class="img-responsive scaled-fifth round-edges">
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <img src="img/founder.jpg" class="img-responsive scaled-third round-edges">
                     <p align="justify floating-text">KR&amp;A was founded by Arjan Knibbe. Arjan has been a sell-side real estate analyst since 1994 at Kempen &amp; Co, UBS Investment Bank and ING. He is a specialist in Continental European property companies and has advised large investors in Europe, the US, Australia and Asia about the strategies, markets, valuation and outlook of European real estate companies. <p id="founder" style="display:none" class="toggle-text">He has written extensively about pan-European valuation methodologies for real estate investmentment and development companies. He has been involved in a large number of equity raisings and IPOs, across Europe. Arjan has a Master in economy from the University of Amsterdam. He specialised in real estate investment and his thesis about the financial reporting of property companies was awarded a 9/10 score by Prof Kohnstamm. He has been a member of the EPRA best practice committee. Arjan is fluent in Dutch, English, French and German and participated in the INSEAD Transition to General Management program in 2013. He teaches listed real estate investment at the MSRE course of the Amsterdam School of Real Estate.</p>
                 	<button id="open-founder" class="open-reader">Read more </button>
                 	</p>
@@ -313,9 +316,12 @@
                 </div-->
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <h3>Address</h3>
-                    <p><img src="img/logo.png" class="img-responsive scaled-eighth">Vijzelstraat 68-78<br>1017&nbsp;HL&nbsp;Amsterdam<br><br><i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022<br><i class="fa fa-fw fa-envelope"></i>&nbsp;arjan@knibberesearch.com<br><i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com<br><br></p>
+                    <p><strong>KR&amp;A</strong><br>Vijzelstraat 68-78<br>1017&nbsp;HL&nbsp;Amsterdam<br><br>
+                    <p><i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022<br><i class="fa fa-fw fa-envelope"></i>&nbsp;<a class="red-link" href="mailto:arjan@knibberesearch.com">arjan@knibberesearch.com</a><br><i class="fa fa-fw fa-globe"></i>&nbsp;<a class="red-link" href="http://www.knibberesearch.com">www.knibberesearch.com</a></p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4">
                     <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" height="300" width="100%" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Vijzelstraat+68+Amsterdam&amp;aq=&amp;sll=52.355519,4.950642&amp;ie=UTF8&amp;t=m&amp;z=11&amp;output=embed&amp;iwloc=near"></iframe>
-                </div>              
+                </div>
             </div>
             <!-- /.row -->
         </div>
