--- a/index.html
+++ b/index.html
@@ -149,12 +149,14 @@
 
     <div class="section">
         <div class="container">
-            <div class="col-lg-8 col-md-8">
-                <h1>About KR&amp;A</h1>
-                <p>KR&amp;A is a European real estate consultancy firm. We offer investors, developers and financers solutions for improved returns, and better risk management. We are experienced in valuing and assessing the outlook for listed real estate companies in Europe. KR&amp;A advises real estate investors about strategy, operations and sustainability. We believe data analytics and the resulting information has become a competitive advantage. We offer a broad range of data solutions for real estate companies. We write bespoke research, we perform due diligence and give second opinions. We are never deal-incentivized. As a result our advice is sound, fully aligned and not clouded by a need for a transaction.</p>
-            </div>
-            <div class="col-lg-4 col-md-4">
-            	<iframe src="//player.vimeo.com/video/113024219?title=0&amp;byline=0&amp;portrait=0&amp;color=b20005" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <div class="row">
+                <div class="col-lg-8 col-md-8">
+                    <h1>About KR&amp;A</h1>
+                    <p>KR&amp;A is a European real estate consultancy firm. We offer investors, developers and financers solutions for improved returns, and better risk management. We are experienced in valuing and assessing the outlook for listed real estate companies in Europe. KR&amp;A advises real estate investors about strategy, operations and sustainability. We believe data analytics and the resulting information has become a competitive advantage. We offer a broad range of data solutions for real estate companies. We write bespoke research, we perform due diligence and give second opinions. We are never deal-incentivized. As a result our advice is sound, fully aligned and not clouded by a need for a transaction.</p>
+                </div>
+                <div class="col-lg-4 col-md-4">
+            	   <iframe src="//player.vimeo.com/video/113024219?title=0&amp;byline=0&amp;portrait=0&amp;color=b20005" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
