--- a/index.html
+++ b/index.html
@@ -150,13 +150,19 @@
     <div class="section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-8">
+                <div class="col-lg-1 col-md-1 col-sm-1"></div>
+                <div class="col-lg-10 col-md-10 col-sm-10">
                     <h1>About KR&amp;A</h1>
                     <p>KR&amp;A is a European real estate consultancy firm. We offer investors, developers and financers solutions for improved returns, and better risk management. We are experienced in valuing and assessing the outlook for listed real estate companies in Europe. KR&amp;A advises real estate investors about strategy, operations and sustainability. We believe data analytics and the resulting information has become a competitive advantage. We offer a broad range of data solutions for real estate companies. We write bespoke research, we perform due diligence and give second opinions. We are never deal-incentivized. As a result our advice is sound, fully aligned and not clouded by a need for a transaction.</p>
                 </div>
-                <div class="col-lg-4 col-md-4">
-            	   <iframe src="//player.vimeo.com/video/113024219?title=0&amp;byline=0&amp;portrait=0&amp;color=b20005" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <div class="col-lg-1 col-md-1 col-sm-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3"></div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                   <iframe src="//player.vimeo.com/video/113024219?title=0&amp;byline=0&amp;portrait=0&amp;color=b20005" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
+                <div class="col-lg-3 col-md-3 col-sm-3"></div>
             </div>
         </div>
     </div>
@@ -169,11 +175,12 @@
                 <div class="col-lg-4 col-md-4">
                     <h3>Membership</h3>
                     <p>Our corporate membership ensures accelerated learning and saves your company valuable time. We get you towards a best in class understanding of real estate centric analytics and visualisations. So you continue to outperform. 
+                    Ask us for trial-membership at <a href="mailto:arjan@knibberesearch.com" class="red-link">arjan@knibberesearch.com</a>. Click <a href="http://kramembership.com/" target="_blank" class="red-link">here</a> for a sneak preview of the members-website.
                     
                     <p id="membership" style="display:none" class="toggle-text">The core of our membership is our information and research. Our research about data and real estate is valuable unbiased information and knowledge. It is not a freeby. We are sharing our best sources with you. It will improve your decision making about investment, development and financing of real estate. Sometimes marginally, sometimes very significantly. We analyse and write about retail, residential, office and other real estate sectors. Our research is never deal-incentivised. With our data, analytics and visualisations, your team will be significantly better informed than before. As a result your team will perform better than less-informed competitors. <br /><br />
                     Our quarterly reports have a web-magazine and hardcopy format. We offer a closed knowledge platform for members. Our experienced Editorial Board ensures quality and relevance of the publications for real estate professionals. We offer members data, analytics and visualisation training for their teams or individuals. As a result you will be nurturing a data driven process. This can adjust a corporate culture towards more efficiency, and enhance outperformance. Our membership content will be online and readable on PC, tablet and smartphone. <br /> <br />
                     A corporate membership is disruptive. It aims to kill inefficient processes, uninformed investments, undesirable developments and misprices loans. It can support your change in corporate culture. Your outperformance will improve further…  <br /> <br />
-                    Ask us for trial-membership at <a href="mailto:arjan@knibberesearch.com" class="red-link">arjan@knibberesearch.com</a>. Click <a href="http://kramembership.com/" target="_blank" class="red-link">here</a> for a sneak preview of the members-website.</p> <button id="open-membership" class="open-reader">Read more </button></p>
+                    </p> <button id="open-membership" class="open-reader">Read more </button></p>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <h3>Consultancy</h3>
@@ -364,7 +371,6 @@
             </div>
             <div class="col-lg-4"></div>
         </div>
-
     </div>
     <!-- /.section -->
 
