Final version? Fixed outline of footer text; made menu closer to membership site

--- a/index.html
+++ b/index.html
@@ -344,28 +344,14 @@
     </div>
 
      <div class="section-colored">
-        <div class="row">
-            <div class="col-lg-5"></div>
-            <div class="col-lg-4 center">
-                <p>&copy; KR&amp;A&nbsp;2014</p>
+        <div class="row" style="text-align:center">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <p class="center">
+                &copy; KR&amp;A&nbsp;2014<br>
+                <i class="fa fa-fw fa-home"></i>&nbsp;Vijzelstraat 68-78&nbsp; &middot; &nbsp;1017&nbsp;HL&nbsp; &middot; &nbsp;Amsterdam&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-envelope"></i>&nbsp;arjan@knibberesearch.com&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com<br>
+                <i class="fa fa-fw fa-info"></i>Trade Register:&nbsp;61899666&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-info"></i>VAT:&nbsp;NL141809553B02
+                </p>
             </div>
-            <div class="col-lg-3"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-9" align="center">
-                <p><i class="fa fa-fw fa-home"></i>&nbsp;Vijzelstraat 68-78&nbsp; &middot; &nbsp;1017&nbsp;HL&nbsp; &middot; &nbsp;Amsterdam&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-phone"></i>&nbsp;+31611303022&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-envelope"></i>&nbsp;arjan@knibberesearch.com&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-globe"></i>&nbsp;www.knibberesearch.com</p>
-            </div>
-            <div class="col-lg-1"></div>
-        </div>  
-
-        <div class="row">
-            <div class="col-lg-4"></div>
-            <div class="col-lg-6">
-                <p><i class="fa fa-fw fa-info"></i>Trade Register:&nbsp;61899666&nbsp; &middot; &nbsp;<i class="fa fa-fw fa-info"></i>VAT:&nbsp;NL141809553B02</p>
-            </div>
-            <div class="col-lg-4"></div>
         </div>
     </div>
     <!-- /.section -->
